--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                     </ul>
                     <ul class="navbar-nav float-end">
                         <li>
-                            <partial name="_AdminPartial" />
+                            <partial name="_OwnerPartial" />
                         </li>
                         <li>
                             <partial name="_LoginPartial" />
