--- a/Northwind.Application/Views/Customers/Index.cshtml
+++ b/Northwind.Application/Views/Customers/Index.cshtml
@@ -9,9 +9,9 @@
 
 <h1>Customers</h1>
 
-@if (User.IsInRole(UserRoles.Admin))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
 {
-    @await Html.PartialAsync("_IndexButtonsPartial")
+    @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
 }
 
 @if (Model.Customers.Any())
