--- a/Northwind.Application/Views/OrderDetails/Index.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Index.cshtml
@@ -18,9 +18,9 @@
 
 <h1>"@(ViewBag.ProductOrCompanyName)" Order Details</h1>
 
-@if (User.IsInRole(UserRoles.Admin))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
 {
-    @await Html.PartialAsync("_IndexButtonsPartial")
+    @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
 }
 
 @if (Model.OrderDetails.Any())
