--- a/Northwind.Application/Views/Roles/Edit.cshtml
+++ b/Northwind.Application/Views/Roles/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Northwind.Application.Constants
 @model Northwind.Application.Models.Roles.RoleChangeModel
 
 <h2>Change role for user: @Model.UserEmail</h2>
@@ -17,10 +18,26 @@
                     @role.Name
                 </td>
                 <td>
-                    @if (role.Name == "customer")
+                    @if (role.Name == UserRoles.Customer)
                     {
                         <select id="customerSelectList" class="form-select" name="CustomerId">
                             @foreach (var option in Model.CustomerList! as SelectList)
+                            {
+                                if (option.Selected)
+                                {
+                                    <option value="@option.Value" selected>@option.Text</option>
+                                }
+                                else
+                                {
+                                    <option value="@option.Value">@option.Text</option>
+                                }
+                            }
+                        </select>
+                    }
+                    @if (role.Name == UserRoles.Employee)
+                    {
+                        <select id="employeeSelectList" class="form-select" name="EmployeeId">
+                            @foreach (var option in Model.EmployeeList! as SelectList)
                             {
                                 if (option.Selected)
                                 {
@@ -47,6 +64,9 @@
     const customerCheckBox = document.getElementById('customer');
     const customerSelectList = document.getElementById('customerSelectList');
     let customerId;
+    const employeeCheckBox = document.getElementById('employee');
+    const employeeSelectList = document.getElementById('employeeSelectList');
+    let employeeId;
 
     if (!customerCheckBox.checked) {
         customerSelectList.value = null;
@@ -66,6 +86,28 @@
         else {
             customerSelectList.value = null;
             customerSelectList.hidden = true;
+        }
+    });
+
+
+    if (!employeeCheckBox.checked) {
+        employeeSelectList.value = null;
+        employeeSelectList.hidden = true;
+    }
+    else {
+        employeeId = employeeSelectList.value;
+    }
+
+    employeeCheckBox.addEventListener('change', (event) => {
+        const checked = event.target.checked;
+
+        if (checked === true) {
+            employeeSelectList.value = customerId;
+            employeeSelectList.hidden = false;
+        }
+        else {
+            employeeSelectList.value = null;
+            employeeSelectList.hidden = true;
         }
     });
 </script>
