--- a/Northwind.Application/Views/Categories/Index.cshtml
+++ b/Northwind.Application/Views/Categories/Index.cshtml
@@ -4,11 +4,12 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Categories";
     ViewData["ActionName"] = "Delete";
+    ViewData["PageStartNumbering"] = ViewBag.PageStartNumbering;
 }
 
 <h1>Categories</h1>
 
-@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Employee))
 {
     @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
 }
