--- a/Northwind.Application/Views/Customers/Index.cshtml
+++ b/Northwind.Application/Views/Customers/Index.cshtml
@@ -5,11 +5,12 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Customers";
     ViewData["ActionName"] = "Delete";
+    ViewData["PageStartNumbering"] = ViewBag.PageStartNumbering;
 }
 
 <h1>Customers</h1>
 
-@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Employee))
 {
     @await Html.PartialAsync("_IndexButtonsPartial", null as SelectList)
 }
