--- a/Northwind.Application/Views/Products/Index.cshtml
+++ b/Northwind.Application/Views/Products/Index.cshtml
@@ -7,14 +7,15 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Products";
     ViewData["ActionName"] = "Delete";
-    ViewData["ForeignKeyValue"] = ViewBag.CategoryId ?? ViewBag.SupplierId;
-    ViewData["ForeignKeyName"] = ViewBag.CategoryId != null ? "categoryId" : "supplierId";
+    ViewData["ForeignKeyValue"] = ViewBag.ForeignKeyValue;
+    ViewData["ForeignKeyName"] = ViewBag.ForeignKeyName;
     ViewData["SelectListName"] = ViewBag.SelectListName;
+    ViewData["PageStartNumbering"] = ViewBag.PageStartNumbering;
 }
 
 <h1>@(selectListHeader != null && selectListHeader != "" ? $"\"{selectListHeader}\"" : string.Empty) Product List</h1>
 
-@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
+@if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner) || User.IsInRole(UserRoles.Employee))
 {
     @await Html.PartialAsync("_IndexButtonsPartial", Model.CategoryList ?? Model.SupplierList, ViewData)
 }
