--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -44,17 +44,40 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Suppliers" asp-action="Index">Suppliers</a>
                             </li>
-                        }
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Catalogue</a>
-                        </li>
-                        @if (User.IsInRole(UserRoles.Customer))
-                        {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Orders" asp-route-customerId="@Context.Session.GetString(SessionValues.CustomerId)" asp-action="Index">Your Orders</a>
+                                <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Catalogue</a>
                             </li>
                         }
-
+                        else
+                        {
+                            @if (User.IsInRole(UserRoles.Customer))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Orders" asp-route-customerId="@Context.Session.GetString(SessionValues.CustomerId)" asp-action="Index">Your Orders</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Catalogue</a>
+                                </li>
+                            }
+                            else
+                            {
+                                @if (User.IsInRole(UserRoles.Employee))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="Customers" asp-action="Index">Customers</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="Suppliers" asp-action="Index">Suppliers</a>
+                                    </li>
+                                }
+                            }
+                        }
                     </ul>
                     <ul class="navbar-nav float-end">
                         <li>
