--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -11,6 +11,7 @@
     string ActionName => ViewData["ActionName"] as string ?? "";
     string ForeignKeyName => ViewData["ForeignKeyName"] as string ?? "";
     string ForeignKeyValue => ViewData["ForeignKeyValue"]?.ToString() ?? "";
+    int? PageStartNumbering => (int?)ViewData["PageStartNumbering"] ?? 1;
 
     PropertyInfo[] Properties => Model.Any() ? Model.First().GetType().GetProperties() : new PropertyInfo[0];
     IEnumerable<string> PropertyNames => Properties.Select(x => x.Name).Where(x => !x.Contains("Id"));
@@ -97,6 +98,7 @@
     <table class="table">
         <thead style="height:60px;">
             <tr>
+                <th class="align-content-center">№</th>
                 @foreach (var name in PropertyNames)
                 {
                     <th class="align-content-center" onclick="sortColumn('@name')" style="cursor:pointer">
@@ -127,6 +129,9 @@
         </thead>
         <tbody>
             <form id="form" method="@Method" asp-action=@ViewData["ActionName"] asp-controller=@ControllerName>
+            @{
+                var number = PageStartNumbering;
+
                 @foreach (var item in base.Model)
                 {
                     if (ActionName == "DeleteConfirmed")
@@ -135,41 +140,43 @@
                     }
 
                     <tr class="@(!IsDetail ? "change-background-color" : "")" style="@(!IsDetail ? "cursor:pointer" : "")">
+
+                        <td class="align-content-center">@(number++)</td>
+
                         @foreach (var value in GetPropertyValues(item))
                         {
                             <td class="align-content-center" style="@(GetStyle(value))" onclick=@(!IsDetail ? $"location.href='{GetLink(GetId(item)!)}'" : "")>
-                               @if (value is byte[])
-                               {
+                                @if (value is byte[])
+                                {
                                    <img src="data:image/bmp;base64,@Convert.ToBase64String(value as byte[] ?? new byte[0])" style="height:60px;width:60px;" />
-                               }
-                               else
-                               {
-                                   @if (value is DateTime)
-                                   {
-                                       @(((DateTime)value).ToShortDateString())
-                                   }
-                                   else
-                                   {
-                                       @if (value is decimal)
-                                       {
-                                           @(((decimal)value).ToString("f2"))
-                                       }
-                                       else
-                                       {
-                                           @if (value is float)
-                                           {
-                                               @(((float)value).ToString("f2"))
-                                           }
-                                           else
-                                           {
-                                               @value
-                                           }
-                                       }
-                                   }
-                               }
-                           </td>
+                                }
+                                else
+                                {
+                                    @if (value is DateTime)
+                                    {
+                                        @(((DateTime)value).ToShortDateString())
+                                    }
+                                    else
+                                    {
+                                        @if (value is decimal)
+                                        {
+                                            @(((decimal)value).ToString("f2"))
+                                        }
+                                        else
+                                        {
+                                            @if (value is float)
+                                            {
+                                                @(((float)value).ToString("f2"))
+                                            }
+                                            else
+                                            {
+                                                @value
+                                            }
+                                        }
+                                    }
+                                }
+                            </td>
                         }
-
                         @if (User.IsInRole(UserRoles.Admin) || User.IsInRole(UserRoles.Owner))
                         {
                             <td class="text-center align-content-center">
@@ -178,6 +185,7 @@
                         }
                     </tr>
                 }
+            }
             </form>
         </tbody>
     </table>
