--- a/Northwind.Application/Views/Orders/Confirm.cshtml
+++ b/Northwind.Application/Views/Orders/Confirm.cshtml
@@ -1,3 +1,3 @@
 ﻿<h1>Thank You! Order Confirmed!</h1>
 </hr>
-<button class="btn btn-primary fw-bold" onclick="location.href='@ViewBag.Link'">Back to Orders</button>
+<button class="btn btn-primary fw-bold" onclick="location.href='@ViewBag.PreviousPage'">Back to Shopping</button>
